Applied requested changes: + Moved body::after block into '@at-root .isDemoVisible' block in DemoNotice style file + Fixed the 'OR' condition  of 'none-pointer-device' mixin in _media style file

--- a/packages/scandipwa/src/component/DemoNotice/DemoNotice.style.scss
+++ b/packages/scandipwa/src/component/DemoNotice/DemoNotice.style.scss
@@ -15,16 +15,6 @@
     --demo-notice-background-color: var(--primary-base-color);
 }
 
-html {
-    &.isDemoVisible {
-        body {
-            &::after {
-                background: linear-gradient(var(--demo-notice-background-color) 50%, var(--footer-background-color) 50%);
-            }
-        }
-    }
-}
-
 .DemoNotice {
     padding-block-start: env(safe-area-inset-top);
     align-items: center;
@@ -42,5 +32,11 @@ html {
 
     @at-root .isDemoVisible {
         --demo-notice-height: 48px;
+
+        body {
+            &::after {
+                background: linear-gradient(var(--demo-notice-background-color) 50%, var(--footer-background-color) 50%);
+            }
+        }
     }
 }
