--- a/packages/scandipwa/src/style/abstract/_media.scss
+++ b/packages/scandipwa/src/style/abstract/_media.scss
@@ -81,7 +81,7 @@
 }
 
 @mixin none-pointer-device {
-    @media (pointer: coarse) or (pointer: none){
+    @media (pointer: coarse) , (pointer: none) {
         @content;
     }
 }
